fix selected user style in dark mode

--- a/frontend/src/css/share-to-user.css
+++ b/frontend/src/css/share-to-user.css
@@ -29,3 +29,7 @@
   justify-content: space-between;
   position: relative;
 }
+
+.share-link-container .add-members .user-item .user-name {
+  color: #212529;
+}
